# reinsight

./: .env  .gitignore  README.md  bulk_payload.json  docker-compose.yml  mapping.json  sample_bordereau.csv  scenario.json
backend/: Dockerfile  requirements.txt
backend/config/: settings.py  urls.py
backend/core/: auth.py  middleware.py  models.py  schema.py  serializers.py  views.py  views_analytics.py  views_data_quality.py  views_exposures.py  views_ingestion.py  views_net.py  views_scenario.py  (+2 more)
demo/: agent_runner.py  demo_accumulation.py  import_from_upload.py
sdk/: README.md  pyproject.toml
sdk/reinsight_sdk/: __init__.py
sdk/reinsight_sdk/analytics/: __init__.py  accumulation.py  net.py  scenario.py  top_exposures.py
sdk/reinsight_sdk/client/: __init__.py  base.py
sdk/reinsight_sdk/exceptions/: __init__.py  errors.py
sdk/reinsight_sdk/exposures/: __init__.py  exposures.py
sdk/reinsight_sdk/health/: __init__.py  health.py
sdk/reinsight_sdk/ingestion/: uploads.py
sdk/reinsight_sdk/models/: __init__.py  analytics.py  data_quality.py  exposures.py  ingestion_helper.py  mapping.py  net.py  scenario.py  top_exposures.py  uploads.py
sdk/reinsight_sdk/portfolios/: data_quality.py
sdk/tests/: sdk_test_apply_mapping_strict.py  sdk_test_data_quality.py  sdk_test_full_ingestion_flow.py  sdk_test_full_ingestion_to_bulk.py  sdk_test_ingest_helper.py  sdk_test_net.py  sdk_test_preview.py  sdk_test_scenario.py  sdk_test_suggest_mapping.py  sdk_test_top.py  sdk_test_upload.py  test_accumulation.py  test_health.py  test_upload_preview_model.py
(+3 files in other folders)
