[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reinsight-sdk"
version = "0.1.0"
description = "Python SDK for Reinsight API (reinsurance exposure analytics demo)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]